# CrownFi

./: .commitlintrc.json  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOY.md  README.md  SECURITY.md  SUPABASE.md  TICKETING_GUIDE.md  USER_FLOW.md  WORKFLOW.md  arcturus.release.json  compose.yaml
.arcturus/: bootstrap-history.jsonl  bootstrap.json  lock.env  managed-files.sha256  (+3 more)
contracts/: Cargo.toml  DEPLOY_GUIDE.md  README.md  deploy.ps1
contracts/audit-anchor/: Cargo.toml
contracts/audit-anchor/src/: lib.rs  test.rs
contracts/audit-anchor/test_snapshots/test/: cannot_overwrite.1.json  publish_and_read.1.json
contracts/collectible/: Cargo.toml
contracts/collectible/src/: lib.rs
contracts/prediction-market/: Cargo.toml  README.md
contracts/prediction-market/src/: lib.rs  test.rs
contracts/sale-splitter/: Cargo.toml
contracts/sale-splitter/src/: lib.rs  test.rs
contracts/sale-splitter/test_snapshots/test/: rejects_non_positive_price.1.json
contracts/scripts/: deploy.sh  setup-testnet-freighter.sh
contracts/ticket/: Cargo.toml
contracts/ticket/src/: lib.rs
contracts/usdc-test/: Cargo.toml
contracts/usdc-test/src/: lib.rs
services/api/: Cargo.toml  Dockerfile
services/api/migrations/: 202607140001_platform_foundation.sql  202607140002_commerce_catalogue.sql  202607140003_commerce_orders.sql  202607140004_stellar_transaction_intents.sql  202607140005_stellar_chain_reconciliation.sql  202607140006_collectible_fulfillment.sql  202607140007_payouts.sql  202607140008_payout_source_account.sql  202607150001_identity_and_site_setup.sql  202607150002_prediction_market_foundation.sql  202607150003_authorization_acl.sql  202607170001_voting_rounds_and_intake.sql  202607170002_ticketing_foundation.sql  202607170003_prediction_positions_settlement.sql  202607170004_voting_snapshots.sql  202607170005_ticket_ownership_evidence.sql  202607170006_prediction_settlement_evidence.sql  202607170007_voting_anchor_intents.sql  202607170008_ticket_transfers.sql  202607170009_prediction_governance_actions.sql  README.md
services/api/src/: access.rs  app.rs  authorization.rs  authorization_acl.rs  commerce.rs  config.rs  database.rs  error.rs  fulfillment.rs  identity.rs  main.rs  manage.rs  market_positions.rs  market_settlement.rs  markets.rs  media.rs  media_completion_lock.rs  models.rs  orders.rs  payouts.rs  platform.rs  seed.rs  state.rs  stellar_intents.rs  stellar_reconciliation.rs  storage.rs  ticket_operations.rs  ticket_transfers.rs  ticketing.rs  voting.rs  voting_anchor.rs  voting_proofs.rs  voting_public.rs
(+324 files in other folders)
