[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
# Soroban 22 testutils are incompatible with ed25519-dalek 3.x. Keep the
# reviewed workspace-compatible version until the SDK raises its own bound.
ed25519-dalek = "=2.2.0"
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
